# ledger-penumbra

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  buf.gen.yaml  proto.mk
app/: Makefile  Makefile.rust  Makefile.version
app/rust/: Cargo.toml
app/rust/.cargo/: config.toml
app/rust/include/: rslib.h
app/rust/src/: address.rs  bolos.rs  constants.rs  effect_hash.rs  ffi.rs  keys.rs  lib.rs  network.rs  parser.rs  protobuf_h.rs  utils.rs  wallet_id.rs  zxerror.rs
app/rust/src/address/: address_view.rs
app/rust/src/ffi/: asset_id.rs  bech32.rs  c_api.rs  keys.rs  sign.rs
app/rust/src/keys/: clue_key.rs  detection_key.rs  dk.rs  fvk.rs  ivk.rs  ka.rs  nk.rs  ovk.rs  payload_key.rs  signing_key.rs  spend_key.rs  transmission_key.rs
app/rust/src/parser/: action.rs  address.rs  amount.rs  asset_id.rs  backref.rs  balance.rs  bytes.rs  clue_plan.rs  commitment.rs  curve_fields.rs  detection.rs  effect_hash.rs  error.rs  fee.rs  fixpoint.rs  id.rs  identity_key.rs  memo.rs  memo_plain_text.rs  note.rs  note_payload.rs  nullifier.rs  object_list.rs  parameters.rs  penalty.rs  plans.rs  position.rs  precision.rs  reserves.rs  rk.rs  rseed.rs  swap_ciphertext.rs  swap_payload.rs  swap_plaintext.rs  symmetric.rs  trading_pair.rs  tx_parameters.rs  validator_identity.rs  value.rs
app/rust/src/parser/plans/: action.rs  action_dutch_auction_withdraw.rs  delegator_vote.rs  detection.rs  memo.rs  output.rs  position_withdraw.rs  spend.rs  swap.rs  symmetric.rs  undelegate_claim.rs
app/rust/src/protobuf_h/: any_pb.rs  asset_pb.rs  auction_pb.rs  client_pb.rs  community_pool_pb.rs  custody_pb.rs  decaf377_fmd_pb.rs  decaf377_rdsa_pb.rs  descriptor_pb.rs  dex_pb.rs  distributions_pb.rs  fee_pb.rs  funding_pb.rs  governance_pb.rs  ibc_pb.rs  keys_pb.rs  num_pb.rs  sct_pb.rs  shielded_pool_pb.rs  stake_pb.rs  tct_pb.rs  timestamp_pb.rs  transaction_pb.rs  txhash_pb.rs
app/rust/src/utils/: big_int.rs  prf.rs  protobuf.rs
docs/: APDUSPEC.md
fuzz/: parser_parse.cpp
(+555 files in other folders)
